# cline-testgen

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.py
cline_py/: __init__.py  _runtime.py
examples/: streamlit_app.py
examples/springboot-sample/src/main/java/com/example/demo/: Calculator.java
examples/springboot-sample/src/test/java/com/example/demo/: CalculatorTest.java
src/: index.js  sdk-entry.js
src/agent/: createAgent.js
src/config/: index.js
src/prompts/: stupid.js  testgen.js  toolcheck.js
src/runners/: runAgent.js  runPrompt.js  runStupid.js  runTestGen.js  runToolCheck.js
src/server/: server.js
src/tools/: index.js
src/utils/: agentEvents.js  assertNode.js  logger.js  safeJson.js
